sumo/tests/dfrouter/errors/options_parsing/triple_minus2/errors.dfrouter
Error: On processing option '---net-file=net.net.xml':
 No option with the name '-net-file' exists.
Error: Could not parse commandline options.
Quitting (on error).
